[package]
name = "download-osm-tiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["rustls"] }
tokio = { version = "1.27.0", features = ["rt", "sync", "macros"] }
